--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -11,9 +11,9 @@ $bp-smallest: 31.25em;
     --fsm: 85px;
     --fss: 30px;
     --fses: 18px;
-    --bg: #1f2229;
+    --bg: #292D3E;
     --fg: #d8dee9;
-    --qbg: #2c323d;
+    --qbg: #32364C;
     --blue: #5e81ac;
 
     @media only screen and (max-width: $bp-large) {
@@ -42,6 +42,7 @@ body {
     align-items: center;
     justify-content: center;
 }
+
 .container {
     width: 150vh;
     height: 85vh;
@@ -60,6 +61,10 @@ body {
     & > * {
         width: 100%;
     }
+}
+
+.hidden {
+  opacity: 0;
 }
 
 .card {
@@ -112,10 +117,20 @@ body {
 }
 
 #hour,
-#separator,
 #minutes {
     font-size: var(--fsg);
     font-weight: bolder;
+}
+
+.separator {
+  font-size: var(--fsg);
+  font-weight: bolder;
+  margin: 0 5px;
+}
+
+#seconds {
+  font-size: var(--fsg);
+  font-weight: bolder;
 }
 
 #month,
@@ -178,30 +193,6 @@ body {
         background-color: var(--qbg);
         box-shadow: 0 5px 7px rgba(#000000, 0.35);
         border-radius: 5px;
-        &-1 {
-            grid-row: 1;
-            grid-column: 1;
-        }
-        &-2 {
-            grid-row: 1;
-            grid-column: 2;
-        }
-        &-3 {
-            grid-row: 2;
-            grid-column: 1;
-        }
-        &-4 {
-            grid-row: 2;
-            grid-column: 2;
-        }
-        &-5 {
-            grid-row: 1;
-            grid-column: 3;
-        }
-        &-6 {
-            grid-row: 2;
-            grid-column: 3;
-        }
 
         &:hover {
             background-color: var(--blue);
